# can_bus

./: CMakeLists.txt  Embedded Software Exercise Rev C.docx  README.md  brake_module.c  brake_module.h  create_report.c  create_report.h  data_frame_st.c  data_frame_st.h  func.c  func.h  main.c  powertrian.c  powertrian.h  queue.c  queue.h  simulation.c  simulation.h  wheel_speeds.c  wheel_speeds.h
output/: summary_report.txt
